<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".navigation.FirstFragment">
    <!-- android:animateLayoutChanges="true" - плавная анимация -->

    <TextView
        android:id="@+id/textView_first_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/textView_helloScreen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/lottie_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- lottie animation view
            android:alpha="0..1" - прозрачность значение "0"
    -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/tv_lottie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_first_screen"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/crew_spencer_question" />

    <TextView
        android:id="@+id/tv_lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/tv_lottie"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <Button
        android:id="@+id/b_ready"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg_effect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/s_ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/b_toBegin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <Button
        android:id="@+id/b_toBegin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg_effect"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/s_toBegin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_ready"
        app:layout_constraintTop_toTopOf="@id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>